<resources>
    <string name="app_name">AttendanceForStudent</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="teacher_signup">REGISTER</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Take Attendance</string>
    <string name="title_dashboard">Student Report</string>
    <string name="title_notifications">Class Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Department">Department</string>
    <string name="Sem">Sem</string>
    <string name="Div">Div</string>
    <string name="fingerprint_header">Place your Finger on the Device Now</string>

</resources>